TestErrors.txt
Test.cpp: In function 'int main()':
Test.cpp:33:24: error: no matching function for call to 'Armor<Equipment*>::change(Equipment&, int)'
  body.change(weapon1, 0);
                        ^
In file included from Functions.h:5:0,
                 from Test.cpp:1:
Armor.h:98:8: note: candidate: void Armor<TYPE>::change(TYPE, int) [with TYPE = Equipment*]
   void change(TYPE v, int spot)
        ^
Armor.h:98:8: note:   no known conversion for argument 1 from 'Equipment' to 'Equipment*'
Test.cpp:56:9: error: 'hat' was not declared in this scope
  delete hat;
         ^
Test.cpp:57:9: error: 'shirt' was not declared in this scope
  delete shirt;
         ^
Test.cpp:59:9: error: type 'class Equipment' argument given to 'delete', expected pointer
  delete weapon1;
         ^
Test.cpp:60:9: error: 'pants' was not declared in this scope
  delete pants;
         ^
make: *** [Test.o] Error 1
